--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,6 +13,8 @@ website:
       - href: posts/index.qmd
         text: "posts"
       - href: projects.qmd
+  twitter-card: true
+  site-url: "https://josiahparry.com"
 
 highlight-style: pygments
  
