--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,13 +13,23 @@ website:
     style: "docked"
     contents:
       - href: index.qmd
-        text: home
+        text: home 
       - about.qmd
       - href: posts/index.qmd
         text: "posts"
       - href: projects.qmd
+      - icon: github
+        href: https://github.com/josiahparry
+        text: "GitHub"
+      - icon: "linkedin"
+        href: https://linkedin.com/in/josiahparry
+        text: "LinkedIn"
+      - icon: twitter
+        href: https://twitter.com/josiahparry
+        text: "Twitter"
       - href: index.xml
         text: RSS
+        icon: rss-fill
   twitter-card: true
   site-url: "https://josiahparry.com"
 
